Avoid content shift in readme page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -92,6 +92,11 @@ header svg {
 	margin: 0!important;
 }
 
+.main-content .badge {
+	display: inline-block;
+	padding: 0.45rem 0;
+}
+
 .main-content h1, .main-content h2, .main-content h3,
 .main-content h4, .main-content h5, .main-content h6 {
 	padding-top: 4rem;
